Fix grid spacing

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -72,6 +72,7 @@
   height: 1fr;
   background-color: white;
   border: 0;
+  font-size: 12pt;
   border-left: solid 0.5px black;
   border-right: solid 0.5px black;
   border-top: solid 0.5px black;
